--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -56,11 +56,11 @@
             android:id="@+id/txtLikes"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:drawableStart="@drawable/ic_like_empty_black"
-            android:drawablePadding="6dp"
+            android:drawablePadding="12dp"
             android:gravity="center_vertical"
             android:textColor="@color/colorWhite"
             android:textSize="16sp"
@@ -72,19 +72,17 @@
             app:layout_constraintTop_toBottomOf="@id/imgPhoto" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/txtCreatedAt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="8dp"
-            android:gravity="center_vertical|end"
-            android:textColor="@color/colorWhite"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/txtLikes"
-            app:layout_constraintTop_toBottomOf="@id/imgPhoto" />
+                android:id="@+id/txtCreatedAt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:gravity="center_vertical|end"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/txtLikes"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/txtLikes"
+                app:layout_constraintTop_toTopOf="@+id/txtLikes"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
