--- a/app/src/main/res/layout/fragment_main_flow.xml
+++ b/app/src/main/res/layout/fragment_main_flow.xml
@@ -17,6 +17,8 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:itemTextColor="@color/selector_bottom_navigation"
+        app:itemIconTint="@color/selector_bottom_navigation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
