add login and navigation

--- a/app/src/main/res/layout/fragment_main_flow.xml
+++ b/app/src/main/res/layout/fragment_main_flow.xml
@@ -8,6 +8,7 @@
         android:id="@+id/childFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,6 +17,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
+        android:background="@color/colorWhite"
         android:layout_height="wrap_content"
         app:itemTextColor="@color/selector_bottom_navigation"
         app:itemIconTint="@color/selector_bottom_navigation"
