--- a/app/src/main/res/menu/menu_main_flow.xml
+++ b/app/src/main/res/menu/menu_main_flow.xml
@@ -6,13 +6,15 @@
         android:icon="@drawable/ic_photos_black"
         android:title="@string/photos" />
 
-    <item android:id="@+id/likedPhotos"
-          android:title="@string/liked"
-          android:icon="@drawable/ic_like_fill_red"/>
+    <item
+        android:id="@+id/likedPhotos"
+        android:icon="@drawable/ic_like_fill_red"
+        android:title="@string/liked" />
 
-    <item android:id="@+id/profile"
-        android:title="@string/profile"
-        android:icon="@drawable/ic_account_circle"/>
+    <item
+        android:id="@+id/profile"
+        android:icon="@drawable/ic_account_circle"
+        android:title="@string/profile" />
 
 
 </menu>
